testfx/errors/error_tests/edge_05_function_keyword.fx
// 测试: 使用 JS 的 function 关键字
function add(a, b) {
    return a + b
}
println(add(1, 2))
